<resources>
    <string name="app_name">Tracking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fragment_time_sheet">Time Sheet</string>
    <string name="fragment_tracking">Tracking</string>
    <string name="fragment_home">User List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_user_list">User List</string>
    <string name="menu_category">News</string>
    <string name="menu_nearest_medical">Nearest Medical</string>
    <string name="menu_feedback">Feedback</string>

    <string name="fragment_news">News</string>
    <string name="feedback_to_app">App feedback</string>
    <string name="feedback_description">Please enter your feedback below to help make our app even better !</string>
    <string name="feedback_hint">Your feedback ...</string>
    <string name="send_feedback">Send feedback</string>
    <string name="welcome">Hello, Welcome to Tracking</string>
    <string name="loggin">Log In</string>
    <string name="lable_signing">Don\'t have account? /<font color="#3F51B5"><b> Register</b></font></string>
    <string name="forget_password">Forget Password</string>
    <string name="channel_description">Notification</string>
    <string name="category_theme">News topic</string>
    <string name="home_everyone">Let\'s all work together to prevent dengue fever !</string>
    <string name="home_button">Dengue News</string>
    <string name="info_app">Thông tin ứng dụng</string>
    <string name="privacy">Dengue alert is a proactive alert application supporting people detect and avoid exposure to risk factors for dengue infection. At the same time, the application aslo provides necessary information on the causative agnet, measures and the nearest medical facilities to the people.</string>
    <string name="note">Dengue Alert does not store or collect user location data.</string>
    <string name="accept_use">Agree to use</string>
    <string name="title_category">Bệnh sốt xuất huyết</string>
    <string name="retry">Thử lại</string>
    <string name="no_location_text">No location</string>
    <string name="ok">Ok</string>
    <string name="permission_rationale">permission rationale</string>
    <string name="permission_denied_explanation">permission denied explanation</string>
    <string name="settings">Settings</string>
    <string name="warning_dengue">Ứng dụng đang quét các ổ dịch xung quanh bạn !</string>
    <string name="password">Password <font color="red">*</font></string>
    <string name="email">Email <font color="red">*</font></string>
    <string name="send">Send</string>
    <string name="signin">Sign In</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="display_name">Display name <font color="red">*</font></string>
    <string name="username">User name <font color="red">*</font></string>
    <string name="signin_account">Sign in</string>
    <string name="login_fail">User name or password is incorect</string>
    <string name="login_success">Loggin successfully.</string>
    <string name="username_not_empty">This field not empty.</string>
    <string name="has_dengue">⛔ Bạn đang ở trong phạm vi có nguy cơ nhiễm Sốt xuất huyết !</string>
    <string name="content_new">News content</string>
    <string name="by_outhor">by author</string>
    <string name="view_count">" %1$s View"</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open setting</string>
    <string name="gps_network_not_enabled">Application must be use your location tp play the current and warning the center of the services.</string>
    <string name="close">Close</string>
    <string name="need_network">The Dengue Alert app needs to use mobile data to detect outbreaks around. You need to anable mobile data or Wifi in the settings.</string>
    <string name="account">User name</string>
    <string name="received">We have received your feedback</string>
    <string name="exit">Exit</string>
    <string name="no_dengue">🛡 Bạn đã ở ngoài phạm vi có nguy cơ nhiễm Sốt xuất huyết</string>
    <string name="at">at</string>
    <string name="feedback_empty">Vui lòng nhập phản hồi của bạn.</string>
    <string name="menu_tracking">Tracking</string>
    <string name="add_tracking">Add Tracking</string>
    <string name="gender">Gender <font color="red">*</font></string>
    <string name="dob">Date Of Birth <font color="red">*</font></string>
    <string name="add_new_tracking">Add</string>
    <string name="cancel_add_new_tracking">Cancel</string>
    <string name="check_in_tracking_successfully">Check in successfully</string>
    <string name="check_in_tracking_failed">Check in failed</string>
    <string name="requirement_add_new_tracking">You must type your content</string>
    <string name="delete_tracking_successfully">Delete Successfully</string>
    <string name="delete_tracking_failed">Delete Failed</string>
    <string name="get_tracking_list_failed">Get tracking list failed. Please try again later</string>
    <string name="update_tracking">Update Tracking</string>
    <string name="update">Update</string>
    <string name="add_new_time_sheet">Add new Time Sheet</string>
    <string name="content">Content</string>
    <string name="personal_information">Personal Information</string>
    <string name="log_out">Log out</string>
    <string name="app_information">App Information</string>
    <string name="load_users_failed">Load users failed</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_tracking_successfully">Add Tracking Successfully</string>
    <string name="add_tracking_failed">Add Tracking Failed</string>
    <string name="user_id" translatable="false">Id: %s</string>
    <string name="server_error_message">There is problem with server. Very sorry to users</string>
    <string name="input_error_message">Please input full of required information and correct type of information</string>
    <string name="request_error_message">Your request doesn\'t exist</string>
    <string name="forbidden_error_message">You are not allowed to access</string>
    <string name="authorization_error_message">Please check again your authorization</string>
    <string name="update_app_successfully">Update successfully</string>
    <string name="cancel_app_update">You canceled the update</string>
    <string name="update_app_failed">Something error with updating</string>
    <string name="restart_app_update">Download update successfully. Restart app in 5 seconds</string>
    <string name="downloading">Downloading</string>
    <string name="user_email" translatable="false">Email: %s</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="university">University <font color="red">*</font></string>
    <string name="sign_in_year">Year <font color="red">*</font></string>
    <string name="confirm_password">Confirm password <font color="red">*</font></string>
    <string name="user_first_name">First Name: %s</string>
    <string name="user_last_name">Last Name: %s</string>
    <string name="user_dob">Date Of Birth: %s</string>
    <string name="user_birth_place">Birth Place: %s</string>
    <string name="user_student_year">Year: %s</string>
    <string name="user_university">University: %s</string>
    <string name="user_count_day_checkin">Check In Days: %s</string>
    <string name="user_count_day_tracking">Tracking Days: %s</string>
    <string name="lock_account">Lock Account</string>
    <string name="user_info">User Info</string>
    <string name="update_user">Update User</string>
    <string name="update_user_successfully">Update User Successfully</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="save_the_change_title_dialog">Do you want to save the change?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="network_requirement">Please turn your network on</string>
    <string name="check_network">Please check your network</string>
    <string name="notification">Notifications</string>
    <string name="noti_channel_id" translatable="false">nimpe_channel_id</string>
    <string name="password_login">Password</string>
    <string name="username_error_signin">"You must fill the username "</string>
    <string name="password_error_signin">You must fill the password</string>
    <string name="displayname_error_signin">You must fill the display name</string>
    <string name="gender_error_signin">You must fill the gender</string>
    <string name="dob_error_signin">You must fill the date of birth</string>
    <string name="email_error_signin">You must fill the email</string>
    <string name="uni_error_signin">You must fill the university</string>
    <string name="year_error_signin">You must fill the year</string>
    <string name="confirmpass_error_signin">You must fill the confirm password</string>
    <string name="confirmpass_same_pass_error">Confirm password must be the same to password</string>
    <string name="existed_username_error">"Username has been already existed "</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="no_users_left">There is no users left</string>
    <string name="graduated">Graduated</string>
    <string name="no_trackings">This day doesn\'t have tracking</string>
    <string name="checked_in">You checked in this day</string>
    <string name="not_check_in">You did not check in this day</string>
    <string-array name="list_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>

    <string-array name="list_year">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Graduated</item>
    </string-array>

    <string-array name="months_calendar">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>