<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/personalFragment"
            android:icon="@drawable/personal_information"
            android:title="@string/personal_information"/>
        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/nav_HomeFragment"
            android:title="@string/menu_user_list"/>
        <item android:id="@+id/trackingFragment"
            android:icon="@mipmap/tracking"
            android:title="@string/menu_tracking"/>
        <item android:id="@+id/timeSheetFragment"
            android:title="@string/time_sheet"
            android:icon="@mipmap/time_sheet"/>


    </group>
    <group android:id="@+id/lang" >
        <item
            android:title=""
            android:icon="@drawable/ic_language"
            android:id="@+id/nav_change_langue"
            app:actionViewClass="androidx.appcompat.widget.AppCompatImageView"
            app:actionProviderClass="android.widget.ShareActionProvider">
        </item>
        <item android:title="@string/exit"
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit"/>
    </group>
</menu>