<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?colorOnPrimary"
    android:padding="16dp"
    tools:context=".ui.security.ResetPasswordFragment">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
        android:text="@string/previous"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/gray"
            android:textSize="28sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/NimpeInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            style="@style/NimpeButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/send" />
    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"/>


</LinearLayout>