<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal"
            tools:context=".ui.security.AcceptActivity">
            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_accept"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/info_app"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:lineHeight="28dp"
                android:text="@string/privacy"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_notification"
                    android:layout_height="24dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_marginStart="8dp"
                    android:textSize="15sp"
                    android:lineHeight="20dp"
                    android:text="@string/note"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/accept_use"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:cornerRadius="18dp"
                android:text="@string/accept_use"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
